--- a/templates/404.hbs
+++ b/templates/404.hbs
@@ -15,6 +15,9 @@
             width: auto;
             height: 100%;
         }
+        footer {
+            background-color: rgb(110 140 140 / 30%);
+        }
     </style>
 </head>
 <body>
@@ -22,5 +25,6 @@
     <div class="container">
         <img src="/assets/image/404.gif" alt="">
     </div>
+    {{>footer}}
 </body>
 </html>
