--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -4,6 +4,12 @@
 <head>
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>About Us</title>
+
+    <style>
+        footer {
+            background-color: rgb(181 208 208 / 30%);
+        }
+    </style>
 </head>
 
 <body>
@@ -28,8 +34,7 @@
 
         </div>
     </section>
-
-
+    {{>footer}}
 </body>
 
 </html>
