--- a/templates/feed.hbs
+++ b/templates/feed.hbs
@@ -44,13 +44,13 @@
                 <div class="discover-more">
                     <h3>Discover more</h3>
                     <div class="find-person">
-                        <a href="#">Find a person you know</a>
+                        <a href="/connection/find-new-people">Find a person you know</a>
                     </div>
                     <div class="post-jobs">
-                        <a href="#">Post a jobs</a>
+                        <a href="/jobs/post-job">Post a jobs</a>
                     </div>
                     <div class="Search-jobs">
-                        <a href="#">Search for a job</a>
+                        <a href="/jobs/search-job">Search for a job</a>
                     </div>
                 </div>
             </div>
