--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -3,6 +3,7 @@
         <a class="nav-logo-link" href="/home"><b>SteerJobs</b></a>
     </div>
     <div class="nav-container-link">
+        <a class="nav-link" href="/feed">Feed</a>
         <a class="nav-link" href="/about">ABOUT</a>
         <a class="nav-link" href={{linkSigninAndProfile}}>{{signinAndProfile}}</a><!--SIGN-IN-->
         <a class="nav-link-signup" href={{linkSignupAndSignout}}>{{signupAndSignout}}</a><!--Sign-Up-->
