--- a/templates/404.hbs
+++ b/templates/404.hbs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>404 Error</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    {{>icon}}
+    {{>style}}
     <style>
         .container {
             width: 100%;
