--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/assets/css/style.css">
     <title>About Us</title>
-
+    {{>icon}}
+    {{>style}}
     <style>
         footer {
             background-color: rgb(181 208 208 / 30%);
