--- a/templates/database.hbs
+++ b/templates/database.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Database Control Board</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    {{>style}}
     <style>
         body {
             width: 100%;
