--- a/templates/feed.hbs
+++ b/templates/feed.hbs
@@ -3,8 +3,8 @@
 
 <head>
     <title>Feed | Steerjobs</title>
-    <script src="https://kit.fontawesome.com/b8afffe50a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    {{>icon}}
+    {{>style}}
 </head>
 
 <body>
