--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -3,7 +3,8 @@
 
 <head>
     <title>SteerJobs</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    {{>icon}}
+    {{>style}}
     <style>
         footer {
             background-color: rgb(132 210 210 / 30%);
