--- a/templates/profile.hbs
+++ b/templates/profile.hbs
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <script src="https://kit.fontawesome.com/b8afffe50a.js" crossorigin="anonymous"></script>
     <title>Profile page</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    {{>icon}}
+    {{>style}}
     <style>
         i {
             font-size: 20px;
