--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -34,16 +34,16 @@
                 <h3 id="job3">SUGGESTED SEARCHES</h3>
             </div>
             <div class="job-content-link">
-                <a href="/jobs/job-search">Engineering</a>
-                <a href="/jobs/job-search">Business Development</a>
-                <a href="/jobs/job-search">Finance</a>
-                <a href="/jobs/job-search">Administrative Assistant</a>
-                <a href="/jobs/job-search">Retail Associate</a>
-                <a href="/jobs/job-search">Customer Service</a>
-                <a href="/jobs/job-search">Operation</a>
-                <a href="/jobs/job-search">Information Technology</a>
-                <a href="/jobs/job-search">Marketing </a>
-                <a href="/jobs/job-search">Human Resources</a>
+                <a href="/jobs/search-job">Engineering</a>
+                <a href="/jobs/search-job">Business Development</a>
+                <a href="/jobs/search-job">Finance</a>
+                <a href="/jobs/search-job">Administrative Assistant</a>
+                <a href="/jobs/search-job">Retail Associate</a>
+                <a href="/jobs/search-job">Customer Service</a>
+                <a href="/jobs/search-job">Operation</a>
+                <a href="/jobs/search-job">Information Technology</a>
+                <a href="/jobs/search-job">Marketing </a>
+                <a href="/jobs/search-job">Human Resources</a>
             </div>
         </div>
     </section>
@@ -54,7 +54,7 @@
             <h2 id="post2">Post your job and find the people you need</h2>
         </div>
         <div class="post-link">
-            <a href="#">Post a Job</a>
+            <a href="/jobs/post-job">Post a Job</a>
         </div>
 
     </section>
@@ -79,7 +79,7 @@
         </div>
         <div class="connect-content">
             <h2 id="connect2"><b>Connect with People who can Help</b></h2>
-            <a href="#">Find people you know</a>
+            <a href="/connection/find-new-people">Find people you know</a>
         </div>
     </section>
     {{>footer}}
